--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#firebase
+.firebase/
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -24,6 +27,3 @@ yarn-error.log*
 
 #readme
 README.html
-
-#firebase
-/.firebase
